2014-12-03  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-invoke-async): New function.
	(soap-invoke): Reimplement using soap-invoke-async.

2014-12-03  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-parse-server-response): Improve docstring.
	(soap-invoke): Inline call to soap-parse-server-response.

2014-12-03  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-decode-xs-complex-type): Prevent incorrect
	warning.

2014-12-02  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-parse-server-response): Rename
	soap-process-url-response.  Destroy the mime part.
	(soap-invoke): Call soap-parse-server-response.

2014-12-02  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el: Update copyright date.

2014-12-02  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el: Fix checkdoc issues.

2014-12-02  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el: Fix indentation and long lines.

2014-12-01  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-time-format): Remove variable.
	(soap-encode-xs-basic-type): Simplify date-time format detection.
	(soap-decode-xs-basic-type): Remove soap-time-format support.

2014-12-01  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-process-url-response): New function.
	(soap-fetch-xml-from-url): Call soap-process-url-response.
	(soap-parse-wsdl-phase-1): New function.
	(soap-parse-wsdl-phase-2): Likewise.
	(soap-parse-wsdl-phase-3): Likewise.
	(soap-parse-wsdl-phase-4): Likewise.
	(soap-parse-wsdl-phase-5): Likewise.
	(soap-parse-wsdl): Call phase functions.

2014-12-01  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-decode-xs-basic-type): Remove one-argument
	and call.

2014-12-01  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-decode-date-time): Improve docstring.

2014-12-01  Thomas Fitzsimmons  <fitzsim@fitzsim.org>
